media query updates for height on smaller laptops - fixes to navigation

--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -132,12 +132,35 @@
 
 //Media query for landscape 
 
-@media (max-height: 580px) {
+@media (max-height: 620px) {
+
+    #main-nav {
+        .img {
+            margin: 1rem;
+        }
+
+        .social {
+            font-size: 1rem;
+        }
+
+        h1 {
+            margin: 1rem 0;
+            font-size: 1.8rem;
+        }
+
+        li {
+            padding: .7rem 0;
+        }
+
+    } 
+
     #header-home {
         .header-content {
             padding-top: 3rem;
         }
     }
+
+
 }
 
 @media (max-height: 330px) {
@@ -149,3 +172,4 @@
         }
     }
 }
+
